# doc-crawler

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  setup.sh  spec.md
docsqa/: README.md  __init__.py  dev.db
docsqa/backend/: app.py  requirements.txt
docsqa/backend/api/: files.py  issues.py  prs.py  rules.py  runs.py
docsqa/backend/core/: catalogs.py  chunker.py  config.py  db.py  git_utils.py  linkcheck.py  mdx_parse.py  models.py  patches.py  schemas.py  verifier.py  version_resolver.py
docsqa/backend/crawler/: pipeline.py  repo_sync.py  run_analysis.py
docsqa/backend/crawler/analyzers/: rule_api_cli.py  rule_links.py  rule_style.py  rule_versions.py
docsqa/backend/migrations/: alembic.ini  env.py
docsqa/backend/migrations/versions/: 0001_initial_schema.py
docsqa/backend/services/: embeddings.py  llm_client.py
docsqa/configs/: config.yml
docsqa/configs/catalogs/: wandb_api.json  wandb_cli.json
docsqa/configs/dictionaries/: wandb_terms.txt
docsqa/docker/: Dockerfile.backend  docker-compose.yml
docsqa/scripts/: dev_seed.sh  run_once.sh  setup.sh
tests/: __init__.py  conftest.py  test_api.py  test_chunker.py  test_config.py  test_database.py  test_debug_db.py  test_mdx_parse.py
